[tool.poetry]
name = "my_py_proj"
version = "0.1.0"
description = ""
authors = ["alexey.paulot <alexey.paulot@etu.hesge.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
mypy = "^0.812"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
tensorflow = "^2.5.0"
Django = "^3.2.4"
starlette = "^0.14.2"
cuda = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"
